--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 #temp junk in folder
-/khan-core
-/citr4
+.vscode/
 
 # dependencies
 /node_modules
